--- a/index.html
+++ b/index.html
@@ -21,6 +21,20 @@
 				<h1>Тут будет долгожданная реклама </h1>
 			</header>
 		</div>
+		<div class="about-us wrap">
+			<div class="about-us__img">
+				<img src="/img/img1.jpg" alt="some image">
+			</div>
+			<div class="about-us__text">
+				<p class="about-us__title">About us </p>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt minima, quas cupiditate aut modi. Voluptatum enim suscipit, aspernatur fugiat, ab voluptas fuga! Maiores commodi reiciendis quibusdam? Quidem at consequuntur, quibusdam.
+				</p>
+				<div class="button about-us__button">
+					<a href="#">Download</a>
+				</div>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
