--- a/index.html
+++ b/index.html
@@ -35,6 +35,50 @@
 				</div>
 			</div>
 		</div>
+		<div class="icons wrap">
+			<div class="icons__elements">
+				<div class="icons__img">
+					<img src="/img/icon1.png" alt="icon1">
+				</div>
+				<p class="icons__title">New Roof</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+			</div>
+			<div class="icons__elements">
+				<div class="icons__img">
+					<img src="/img/icon1.png" alt="icon1">
+				</div>
+				<p class="icons__title">New Roof</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+			</div>
+			<div class="icons__elements">
+				<div class="icons__img">
+					<img src="/img/icon1.png" alt="icon1">
+				</div>
+				<p class="icons__title">New Roof</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+			</div>
+			<div class="icons__elements">
+				<div class="icons__img">
+					<img src="/img/icon1.png" alt="icon1">
+				</div>
+				<p class="icons__title">New Roof</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+			</div>
+			<div class="icons__elements">
+				<div class="icons__img">
+					<img src="/img/icon1.png" alt="icon1">
+				</div>
+				<p class="icons__title">New Roof</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+			</div>
+			<div class="icons__elements">
+				<div class="icons__img">
+					<img src="/img/icon1.png" alt="icon1">
+				</div>
+				<p class="icons__title">New Roof</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
